# pure-txt

./: default.nix  pure-txt.cabal
src/Pure/Data/: Txt.hs
src/Pure/Data/Txt/: Internal.hs
src/Pure/Data/Txt/Internal/: GHC.hs  GHCJS.hs
