name:                pure-txt
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-txt
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag use-template-haskell
     Description: enable template haskell for a Lift Txt instance
     Default: True
     Manual: True

library
  build-depends:
    base >= 4.8 && < 5,
    pure-default >= 0.7 && < 1,
    bytestring >= 0.10 && < 0.11,
    text >= 1.2 && < 1.3,
    roles >= 0.2 && < 0.3

  exposed-modules:
    Pure.Data.Txt
    Pure.Data.Txt.Internal

  if flag(use-template-haskell)
    cpp-options: -DUSE_TEMPLATE_HASKELL
    build-depends: template-haskell

  if (impl(ghcjs))
    build-depends:
      ghcjs-base >= 0.2 && < 0.3,
      hashable >= 1.2 && < 1.3

    other-modules:
      Pure.Data.Txt.Internal.GHCJS

  else
    other-modules:
      Pure.Data.Txt.Internal.GHC

  hs-source-dirs: src

  default-language: Haskell2010
