name:                pure-txt
version:             0.8.0.0
homepage:            purehs.org/doc/pure-txt
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-txt.git

Flag use-template-haskell
     Description: enable template haskell for a Lift Txt instance
     Default: True
     Manual: True

library
  build-depends:
    base,
    pure-default,
    bytestring,
    text,
    roles

  exposed-modules:
    Pure.Data.Txt
    Pure.Data.Txt.Internal

  if flag(use-template-haskell)
    cpp-options: -DUSE_TEMPLATE_HASKELL
    build-depends: template-haskell

  if (impl(ghcjs))
    build-depends:
      ghcjs-base,
      hashable

    other-modules:
      Pure.Data.Txt.Internal.GHCJS

  else
    other-modules:
      Pure.Data.Txt.Internal.GHC

  hs-source-dirs: src

  default-language: Haskell2010
